2003-10-03  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/admin/Tournaments.java (verifyData): Check for
	circularities in tournaments (766563).

2003-10-02  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/scoreEntry/Submit.java: Added support for
	enumerations and checking restrictions on the server side (707877).

2003-10-01  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/Queries.java (updateScoreTotals): Added support for
	totaling of scores with enumerated goals (707877).

2003-09-29  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/scoreEntry/ScoreEntry.java: Added support for
	enumerated goals (707877).  Just need to fix the score computation
	now.

	* src/resources/fll.xsd: Removed namespace declaration from schema
	since JSTL 1.0 doesn't know how to properly handle namespaces.
	This also caused the web pages to be updated to properly reference
	the challenge title, I was just getting lucky that it was the
	first title attribute in the document.

2003-09-20  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/report/FinalComputedScores.java (generateReport):
	Don't show scores from subjective categories that have 0 weight
	(809035).

	* src/fll/web/admin/UploadSubjectiveData.java
	(saveSubjectiveData): Now handle carriage returns in score.xml
	properly.

2003-09-17  Jon Schewe  <jpschewe@mtu.net>

	* docs/index.html: Updated with information about computers
	required for a tournament (707857).

2003-09-16  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/GenerateDB.java (generateDB): Make sure no team name
	is blank by defaulting it to '<No Name>' in the database (707849).

2003-09-08  Jon Schewe  <jpschewe@mtu.net>

	* web/admin/filterTeams.jsp: Remvoed javascript from submit button
	in favor of using standard form parameters and server side
	checking (707895).

2003-09-07  Jon Schewe  <jpschewe@mtu.net>

	* web/scoreboard/top10.jsp: Now the top10 page uses session
	variables instead of form parameters to keep track of which